1.4.0:

2007-03-10  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/users/dialog_user.cc:
	* glom/mode_design/users/dialog_user.h: Added check_password(), which warns about 
	an empty password or a password confirmation failure.
	* glom/mode_design/users/dialog_users_list.cc: When adding or editing a user, 
	check the password, using check_password().

1.3.12:

2007-03-09  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom_privs.cc: Privs::get_table_privileges(): Cope with the changed 
	pg_class.relacl format in Postgres 8.x (8.2, maybe >=8.0), which does not have 
	the "group " prefix, now that users and groups are both just roles to Postgres.
	The user/group distinction will remain in the Glom UI, because it is a sensible 
	way to organise the access rights.
	This should still be able to cope with earlier versions of Postgres, such as 
	Postgres 7.4, but I have not tested that myself. 

	* glom/main.cc: Stop when there is a problem parsing the command line options, 
	and give a hint about using --help.

2007-03-07  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/connectionpool.cc: Commented-out the use of avahi, because 
	our use of it seems to be unstable, and it does not do anything useful yet 
	anyway.

2007-03-06  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/Makefile.am:
	* glom/libglom/connectionpool.cc:
	* glom/libglom/connectionpool.h: Moved the avahi code into its own class, 
	to keep the ConnectionPool class simpler.
	The async stuff might mean that we cannot tie the avahi publishing to an 
	instance lifetime, but lets see.
	* glom/libglom/test_avahi_publisher.cc: Added a test case for just the 
	avahi utility class.

1.3.11:

2007-03-04  Armin Burgmeier  <armin@openismus.com>

	* glom/utilitiy_widgets/db_adddel/db_adddel.h:
	* glom/utilitiy_widgets/db_adddel/db_adddel.cc: Added a
	signal_script_button_clicked that is emitted when the user
	clicks on a list button.

	* glom/mode_data/box_data.h: