@@ -49,7 +49,7 @@ AC_LANG_CPLUSPLUS
 
 # Checks for libraries
 # We need libgnome only for gnome_help_display().:
-PKG_CHECK_MODULES(GLOM, bakery-2.4 >= 2.3.18 gtkmm-2.4 >= 2.6.1 gthread-2.0 gnome-vfsmm-2.6 >= 2.11.1 libgnomecanvasmm-2.6 >= 2.10.0 libxslt >= 1.1.10 pygda-1.2 pygtk-2.0 >= 2.6.0 libgnome-2.0 >= 2.6.0 iso-codes libgdamm-2.0 >= 1.3.7 libgtksourceviewmm-1.0 libgda >= 1.2.4 avahi-glib)
+PKG_CHECK_MODULES(GLOM, bakery-2.4 >= 2.3.18 gtkmm-2.4 >= 2.6.1 gthread-2.0 gnome-vfsmm-2.6 >= 2.11.1 libgnomecanvasmm-2.6 >= 2.10.0 libxslt >= 1.1.10 pygda-1.2 pygtk-2.0 >= 2.6.0 libgnome-2.0 >= 2.6.0 iso-codes libgdamm-2.0 >= 1.3.7 libgtksourceviewmm-1.0 libgda >= 1.2.4 avahi-glib goocanvas)
 
 GLOM_LIBS+=" --no-undefined"
 AC_SUBST(GLOM_CFLAGS)
@@ -123,6 +123,7 @@ AC_OUTPUT(Makefile \
       glom/utility_widgets/db_adddel/Makefile \
       glom/python_embed/Makefile \
         glom/python_embed/python_module/Makefile \
+    glom/relationships_overview/Makefile \
     glom/reports/Makefile \
     glom/translation/Makefile \
     icons/Makefile \
@@ -133,5 +134,4 @@ AC_OUTPUT(Makefile \
   glom.desktop.in
 )
 
-#     glom/relationships_overview/Makefile \
 
