@@ -1,3 +1,9 @@
+2007-02-16  Murray Cumming  <murrayc@murrayc.com>
+
+	* configure.in:
+	* glom/Makefile.am:
+	* glom/frame_glom.cc: Enable the Relationships Overview code.
+
 1.4.0:
 
 2007-03-10  Murray Cumming  <murrayc@murrayc.com>
